# figma-cli

./: .gitignore  Cargo.toml  README.md  install.sh
assets/: engine.js  tokens-shadcn.js  tools.js
assets/cmd/: a11y_contrast.js  a11y_text.js  a11y_touch.js  export_css.js  export_dtcg.js  export_tailwind.js  set_batch.js  tokens_radii.js  tokens_spacing.js  var_visualize.js
assets/plugin/: code.js  ui.html
docs/: ARCHITECTURE.md  DECISIONS.md  README.md  RESUMING.md  SESSION-LOG.md
engine-src/: build-engine.sh  entry.mjs  figma-patch.stub.js  ws.stub.js
skill/: README.md  SKILL.md
skill/js/: package.json
skill/js/plugin/: code.js  ui.html
skill/plugin/: code.js  manifest.json  ui.html
skill/reference/: JSX.md  REFERENCE.md
src/: cmds.rs  config.rs  daemon.rs  engine.rs  jsgen.rs  lifecycle.rs  main.rs  passthrough.rs  tools.rs  transport.rs
test-helpers/: fake-plugin.mjs
tools-src/: build-tools.sh  entry.mjs  fs.stub.js  jpegjs.stub.js  path.stub.js  pngjs.stub.js
